Numbered buttons work along with the sum/addition feature

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,7 +9,9 @@
 <body>
 
     <div class="calculator">
-        <div class="screen"></div>
+        <div class="screen">
+            <div id="display"></div>
+        </div>
         <div class="keyholder">
             <button class="keys">1</button>
             <button class="keys">2</button>
@@ -24,7 +26,7 @@
             <button class="keys">.</button>
         </div>
         <div class="operator">
-            <button class="op-keys">Clear</button>
+            <button class="op-keys" id="btnclear">Clear</button>
             <button class="op-keys">+</button>
             <button class="op-keys">-</button>
             <button class="op-keys">X</button>
@@ -37,7 +39,7 @@
 
 
 
-
+    <script src="../Scripts/mainScript.js"></script>
 </body>
-<script src="../Scripts/mainScript.js"></script>
+
 </html>
