All functions work. Gotchas/Bugs haven't been addressed yet

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -29,7 +29,7 @@
             <button class="op-keys" id="btnclear">Clear</button>
             <button class="op-keys">+</button>
             <button class="op-keys">-</button>
-            <button class="op-keys">X</button>
+            <button class="op-keys">*</button>
             <button class="op-keys">/</button>
             <button class="op-keys">=</button>
         </div>
